# neko

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  format.sh  test.ne
docs/: grammar.md
src/: main.cpp
src/codegen/: codegen.cpp  codegen.hpp
src/ir/: ir_generator.cpp  ir_generator.hpp  tac.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: ast.hpp  ast_printer.hpp  parse_error.hpp  parser.cpp  parser.hpp  visitor.hpp
src/sema/: sema_error.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  symbol_table.cpp  symbol_table.hpp
tests/: arithmetic.ne  control_flow.ne  functions.ne
